# MfxExamples

./: .gitmodules  ArrayEffect.hpp  BoxGeneratorEffect.hpp  BoxUvEffect.hpp  CMakeLists.txt  CopyEffect.hpp  ExplodeEffect.hpp  PointAttributeMath.hpp  README.md  TranslateEffect.hpp  plugin.cpp  utils.hpp
cmake/: FetchOpenMfx.cmake  utils.cmake
